sumo/tests/sumo/output/e3/errors/lane_missing__exit/errors.sumo
Error: The description of an exit of the detector '4/1to3/1' does not contain a needed value.
Quitting (on error).
